header with main menu created

--- a/index.html
+++ b/index.html
@@ -47,9 +47,68 @@
                         <i class="bx bxs-shopping-bag"></i>
                     </div>
                 </nav>
-
             </div>
         </header>
+        <!--Main ================== -->
+        <main>
+            <div class="home" id="home">
+                <div class="container">
+                    <div class="home_container">
+                        <div class="home_data">
+                            <span class="home_subtitle">
+                                Nike
+                            </span>
+                            <h1 class="home_title">Air Max Motion 2</h1>
+                            <p class="home_decription">
+                                Rule the street in the Nike air Max motion 2 . They blend 
+                                performance details with streetwaer.
+                            </p>
+
+
+                            <div class="home_actions">
+                                <div class="home_sizes">
+                                    <span class="home_size active">40</span>
+                                    <span class="home_size">41</span>
+                                    <span class="home_size">42</span>
+                                </div>
+                                <div class="home_amounts">
+                                    <span>
+                                        <i class="bx bx-minus"></i>
+                                    </span>
+                                    <span class="home_amount-mum">1</span>
+                                    <span>
+                                        <i class="bx bx-plus"></i>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="home_price">
+                            <span class="home_price-num">$99.00</span>
+                            <a href="#" class="button home_price-btn">
+                                <span class="button_text">Add to cart</span>
+                                <div class="button_hover-left"></div>
+                                <div class="button_hover-right"></div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="home_sneakers">
+                        <div class="home_shape black ative">
+                            <img src="" alt="" class="home_img"/>
+                        </div>
+                        <div class="home_shape pink">
+                            <img src="" alt="" class="home_img"/>
+                        </div>
+                        <div class="home_color-button">
+                            <span class="home_color-button black active" id="black"></span>
+                            <span class="home_color-button pink " id="pink"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            </section>
+        </main>
         <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
         <script src="/script.js"></script>
     </body>
