section swiper with cards created

--- a/index.html
+++ b/index.html
@@ -63,8 +63,6 @@
                                 Rule the street in the Nike air Max motion 2 . They blend 
                                 performance details with streetwaer.
                             </p>
-
-
                             <div class="home_actions">
                                 <div class="home_sizes">
                                     <span class="home_size active">40</span>
@@ -91,13 +89,12 @@
                             </a>
                         </div>
                     </div>
-
                     <div class="home_sneakers">
                         <div class="home_shape black ative">
-                            <img src="" alt="" class="home_img"/>
+                            <img src="" alt="" class="home_img">
                         </div>
                         <div class="home_shape pink">
-                            <img src="" alt="" class="home_img"/>
+                            <img src="" alt="" class="home_img">
                         </div>
                         <div class="home_color-button">
                             <span class="home_color-button black active" id="black"></span>
@@ -106,10 +103,108 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="festured section" id="featured">
+            <div class="container">
+                <h1 class="section-title">featured</h1>
+                <div class="featured_swiper swiper">
+                    <div class="swiper-wrapper">
+                        <div class="featured_card swiper-slide">
+                            <div class="featured_tag">sale</div>
+                            <img src="" alt="" class="featured_img">
+                            <div class="featured_data">
+                                <h3 class="featured_title">Nike Air Max</h3>
+                                <span class="featured_price">$159.99</span>
+                                <p class="featured_description">
+                                    Nike Air footwear basketball sneakers.
+                                </p>
+                                <a href="#" class="button featured_button">
+                                    <span class="button_text">Buy now</span>
+                                    <div class="button_hover-left"></div>
+                                    <div class="button_hover-right"></div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="featured_card swiper-slide">
+                            <div class="featured_tag">sale</div>
+                            <img src="" alt="" class="featured_img">
+                            <div class="featured_data">
+                                <h3 class="featured_title">Nike Air Max</h3>
+                                <span class="featured_price">$149.99</span>
+                                <p class="featured_description">
+                                    Nike Air footwear basketball sneakers.
+                                </p>
+                                <a href="#" class="button featured_button">
+                                    <span class="button_text">Buy now</span>
+                                    <div class="button_hover-left"></div>
+                                    <div class="button_hover-right"></div>
+                                </a>
+                            </div>
+                        </div>
 
-            </section>
-        </main>
-        <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-        <script src="/script.js"></script>
-    </body>
+                           <div class="featured_card swiper-slide">
+                            <div class="featured_tag">sale</div>
+                            <img src="" alt="" class="featured_img">
+                            <div class="featured_data">
+                                <h3 class="featured_title">Nike Air Max</h3>
+                                <span class="featured_price">$169.99</span>
+                                <p class="featured_description">
+                                    Nike Air footwear basketball sneakers.
+                                </p>
+                                <a href="#" class="button featured_button">
+                                    <span class="button_text">Buy now</span>
+                                    <div class="button_hover-left"></div>
+                                    <div class="button_hover-right"></div>
+                                </a>
+                            </div>
+                        </div>
+                           <div class="featured_card swiper-slide">
+                            <div class="featured_tag">sale</div>
+                            <img src="" alt="" class="featured_img">
+                            <div class="featured_data">
+                                <h3 class="featured_title">Nike Air Max</h3>
+                                <span class="featured_price">$179.99</span>
+                                <p class="featured_description">
+                                    Nike Air footwear basketball sneakers.
+                                </p>
+                                <a href="#" class="button featured_button">
+                                    <span class="button_text">Buy now</span>
+                                    <div class="button_hover-left"></div>
+                                    <div class="button_hover-right"></div>
+                                </a>
+                            </div>
+                        </div>
+
+
+                    </div>
+
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="collection section">
+            <div class="container">
+                <div class="collection_container">
+                    <div class="collection-card">
+                        <div class="collection_data">
+                            <h2 class="collection_title">
+                            Nike
+                            </h2>
+                            <p class="collection_description">New collection 2023</p>
+                            <a href="#" class="button">
+                                <span class="button_text">buy now</span>
+                                <div class="button_hover-left"></div>
+                                <div class="button_hover-right"></div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script src="/script.js"></script>
+</body>
 </html>
