--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
             </div>
         </section>
-        <section class="festured section" id="featured">
+        <section class="featured section" id="featured">
             <div class="container">
                 <h1 class="section-title">featured</h1>
                 <div class="featured_swiper swiper">
@@ -141,8 +141,7 @@
                                 </a>
                             </div>
                         </div>
-
-                           <div class="featured_card swiper-slide">
+                        <div class="featured_card swiper-slide">
                             <div class="featured_tag">sale</div>
                             <img src="" alt="" class="featured_img">
                             <div class="featured_data">
@@ -158,7 +157,7 @@
                                 </a>
                             </div>
                         </div>
-                           <div class="featured_card swiper-slide">
+                        <div class="featured_card swiper-slide">
                             <div class="featured_tag">sale</div>
                             <img src="" alt="" class="featured_img">
                             <div class="featured_data">
@@ -174,23 +173,18 @@
                                 </a>
                             </div>
                         </div>
-
-
                     </div>
-
                     <div class="swiper-pagination"></div>
                 </div>
             </div>
         </section>
-
-
         <section class="collection section">
             <div class="container">
                 <div class="collection_container">
                     <div class="collection-card">
                         <div class="collection_data">
                             <h2 class="collection_title">
-                            Nike
+                                Nike
                             </h2>
                             <p class="collection_description">New collection 2023</p>
                             <a href="#" class="button">
@@ -199,10 +193,162 @@
                                 <div class="button_hover-right"></div>
                             </a>
                         </div>
+                        <img src="" alt="" class="collection_img">
                     </div>
+
+                      <div class="collection-card">
+                        <div class="collection_data">
+                            <h2 class="collection_title">
+                                Addidas
+                            </h2>
+                            <p class="collection_description">New collection 2023</p>
+                            <a href="#" class="button">
+                                <span class="button_text">buy now</span>
+                                <div class="button_hover-left"></div>
+                                <div class="button_hover-right"></div>
+                            </a>
+                        </div>
+                        <img src="" alt="" class="collection_img">
+                    </div>
+
+
                 </div>
             </div>
         </section>
+
+       <section class="women section" id="women">
+        <div class="container">
+            <h1 class="section-title">women sneakers</h1>
+            <div class="women_swiper swiper">
+                <div class="swiper-wrapper">
+                    <div class-="women_card swiper-slide">
+                        <div class="women_tag">AIR ZOOM PEGASUS</div>
+                        <img src="" alt="" class="women_img"/>
+                        <div class="women_content">
+                            <a href="" class="women_link">
+                                <i class="bx bx-cart-alt"></i>
+                            </a>
+                            <div class="women_prices">
+                                <span class="women_discount">$990.99</span>
+                                <span class="women_price">$750.00</span>
+                            </div>
+                            <a href="#" class="women_link"> <i class="bx bx-heart"></i> </a>
+                        </div>
+                    </div>
+
+                     <div class-="women_card swiper-slide">
+                        <div class="women_tag">AIR ZOOM PEGASUS</div>
+                        <img src="" alt="" class="women_img"/>
+                        <div class="women_content">
+                            <a href="" class="women_link">
+                                <i class="bx bx-cart-heart"></i>
+                            </a>
+                            <div class="women_prices">
+                                <span class="women_discount">$990.99</span>
+                                <span class="women_price">$750.00</span>
+                            </div>
+                            <a href="#" class="women_link"> <i class="bx bx-cart-alt"></i> </a>
+                        </div>
+                    </div>
+
+
+                        <div class-="women_card swiper-slide">
+                        <div class="women_tag">AIR ZOOM PEGASUS</div>
+                        <img src="" alt="" class="women_img"/>
+                        <div class="women_content">
+                            <a href="" class="women_link">
+                                <i class="bx bx-cart-heart"></i>
+                            </a>
+                            <div class="women_prices">
+                                <span class="women_discount">$990.99</span>
+                                <span class="women_price">$750.00</span>
+                            </div>
+                            <a href="#" class="women_link"> <i class="bx bx-cart-alt"></i> </a>
+                        </div>
+                    </div>
+
+                        <div class-="women_card swiper-slide">
+                        <div class="women_tag">AIR ZOOM PEGASUS</div>
+                        <img src="" alt="" class="women_img"/>
+                        <div class="women_content">
+                            <a href="" class="women_link">
+                                <i class="bx bx-cart-heart"></i>
+                            </a>
+                            <div class="women_prices">
+                                <span class="women_discount">$990.99</span>
+                                <span class="women_price">$750.00</span>
+                            </div>
+                            <a href="#" class="women_link"> <i class="bx bx-cart-alt"></i> </a>
+                        </div>
+                    </div>
+
+
+
+                </div>
+
+                <div class="swiper-button-prev">
+                    <i class="bx bx-left-arrow-alt"></i>
+                </div>
+                <div class="swiper-button-next">
+                    <i class="bx bx-right-arrow-alt"></i>
+                </div>
+            </div>
+        </div>
+
+       </section>
+       <section class="offer section">
+        <div class="container">
+            <div class="offer_container">
+                <div class="offer_data">
+                    <h2 class="offer_title">50% OFF</h2>
+                    <p class="offer_description">in Addidas Superstar sneakers</p>
+                    <a href="#" class="button">
+                        <span class="button_text">Shop now</span>
+                        <div class="button_hover-left"></div>
+                        <div class="button_hover-right"></div>
+                    </a>
+                </div>
+                <img src="" alt="" class="offer_img"/>
+            </div>
+        </div>
+
+       </section>
+
+
+       <section class="new section" id="new">
+        <div class="container">
+            <h2 class="section-title">new collection</h2>
+            <div class="new_container">
+                <div class="new_card">
+                    <img src="" alt="" class="new_img-arrivals"/>
+                    <div class="new_data">
+                        <h2 class="new_title">New arrivals</h2>
+                        <span class="new__price">From %79.99</span>
+                        <a href="" class="button">
+                            <span class="button__text">view collection</span>
+                            <div class="button__hover-left"></div>
+                            <div class="button__hover-right"></div>
+                        </a>
+                    </div>
+                </div>
+
+                  <div class="new_card">
+                    <img src="" alt="" class="new_img-arrivals"/>
+                    <div class="new_cart">
+                        <h2 class="new_title">New arrivals</h2>
+                        <span class="new__price">From %79.99</span>
+                        <a href="" class="button">
+                            <span class="button__text">view collection</span>
+                            <div class="button__hover-left"></div>
+                            <div class="button__hover-right"></div>
+                        </a>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+       </section>
     </main>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="/script.js"></script>
